Fix alignment between dashboard headers and root nodes

--- a/src/Umbraco.Web.UI.Client/src/less/components/tree/umb-tree.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/tree/umb-tree.less
@@ -73,9 +73,7 @@ body.touch .umb-tree {
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
-    
-    border:2px solid transparent;
-    
+
     color: @ui-option-type;
     a {
         color: @ui-option-type;
@@ -103,6 +101,10 @@ body.touch .umb-tree {
             color: @ui-option-type-hover;
         }
     }
+}
+
+.umb-tree-item__inner {
+    border: 2px solid transparent;
 }
 
 .umb-tree-header {
